ContextoClass add & TablaSimbolos changed